--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,14 @@
             <artifactId>utils</artifactId>
             <version>3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.1</version>
+        </dependency>
+
     </dependencies>
 
 
